--- a/src/components/Home/ProductsDisplay/styles.css
+++ b/src/components/Home/ProductsDisplay/styles.css
@@ -142,10 +142,11 @@
     }
 
     .product__details h2{
-        font-size: 1.5rem;
+        font-size: 1.4rem;
+        font-weight: 600;
     }
 
     .product__details h3{
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
 }
