--- a/src/components/Cart/styles.css
+++ b/src/components/Cart/styles.css
@@ -18,13 +18,12 @@
 }
 
 .header{
-  width: 97%;
-  max-width: 900px;
   margin: 0 auto;
 }
 
 .cart__items {
-  width: 75%;
+  width: 94%;
+  max-width: 750px;
   margin: 0 auto;
 }
 
@@ -51,20 +50,14 @@
   height: 300px;
 }
 
-.cart_item_wrapper {
-  width: 97%;
-  max-width: 900px;
-  margin: 0 auto;
-}
-
 .cart_item_container {
   background: rgb(235, 230, 230);
   width: 100%;
   max-width: 100%;
-  height: 340px;
+  height: auto;
   margin-bottom: 1rem;
   display: grid;
-  grid-template-columns: 2fr 4fr;
+  grid-template-columns: 2fr 3fr;
   padding: 10px;
   border-radius: 10px;
 }
@@ -72,7 +65,7 @@
 .cart_item_image {
   min-width: 100%;
   width: 100%;
-  height: 320px;
+  height: 300px;
   border-radius: 10px;
   object-fit: fill;
 }
@@ -89,15 +82,15 @@
 }
 
 .cart_item_name h3 {
-  font-size: 2rem;
-  font-weight: 800;
+  font-size: clamp(1.3rem, 3.5vw, 1.4rem);
+  font-weight: 600;
   margin-right: 0.2rem;
   margin-bottom: .6rem;
 }
 
 .cart_item_name h4 {
-  font-size: 1.2rem;
-  font-weight: 700;
+  font-size: clamp(1.2rem, 3.5vw, 1.3rem);
+  font-weight: 500;
 }
 
 .increment_decrement_func {
@@ -107,6 +100,7 @@
 }
 
 .increment_decrement_func h4 {
+  font-size: clamp(1rem, 3.5vw, 1.1rem);
   margin: 0 0.5rem;
 }
 
@@ -123,6 +117,10 @@
   margin-bottom: 2rem;
 }
 
+.item_qty_display h4{
+  font-size: clamp(1rem, 3.5vw, 1.1rem);
+}
+
 .delete_item_btn {
   outline: none;
   border: none;
@@ -133,8 +131,7 @@
   display: flex;
   align-items: center;
   gap: 0.2rem;
-  font-size: 1.1rem;
-  font-weight: 600;
+  font-size: 1rem;
 }
 
 .cart_items_total {
@@ -154,11 +151,13 @@
 }
 
 .total__price h3 {
-  font-weight: 900;
+  font-size: clamp(1.1rem, 3.5vw, 1.3rem);
+  font-weight: 600;
   margin-right: 0.5rem;
 }
 
 .total__price h4 {
+  font-size: clamp(1.1rem, 3.5vw, 1.3rem);
   font-weight: 600;
 }
 
@@ -167,9 +166,9 @@
   border: none;
   border: 1px solid#7f4dc2;
   color: #7f4dc2;
-  padding: 10px;
+  padding: 5px;
   border-radius: 5px;
-  font-size: 1.2rem;
+  font-size: clamp(1.1rem, 3.5vw, 1.2rem);
   font-weight: 600;
   display: flex;
   align-items: center;
@@ -255,17 +254,9 @@
   .cart_item_name h4 {
     font-size: 1.2rem;
   }
-
-  .increment_decrement_func h4,
-  .item_qty_display h4 {
-    font-size: .7rem;
-  }
 }
 
 @media (max-width: 520px) {
-  .cart__items {
-    width: 97%;
-  }
 
   .cart_item_container {
     height: 250px;
@@ -274,20 +265,6 @@
 
   .cart_item_image {
     height: 230px;
-  }
-
-  .cart_item_name h3 {
-    font-size: 1.1rem;
-  }
-
-  .cart_item_name h4 {
-    font-size: 0.9rem;
-    font-weight: 900;
-  }
-
-  .increment_decrement_func h4,
-  .item_qty_display h4 {
-    font-size: .7rem;
   }
 }
 
@@ -301,47 +278,12 @@
   }
 
   .cart_item_image {
-    height: 320px;
+    height: 300px;
   }
   
   .item_details_container {
     margin-left: 0;
     margin-top: 1rem;
     margin-bottom: .6rem;
-  }
-
-  .cart__items {
-    width: 98%;
-  }
-
-  .cart_item_name h3 {
-    font-size: 1.3rem;
-  }
-
-  .cart_item_name h4 {
-    font-size: 1.2rem;
-  }
-
-  .increment_decrement_func h4{
-    font-size: 1.1rem;
-    font-weight: 900;
-  }
-
-  .item_qty_display h4{
-    font-size: 1rem;
-    font-weight: 700;
-  }
-
-  .total__price h3,.total__price h4{
-    font-size: 1.2rem;
-    font-weight: 800;
-  }
-
-  .delete_item_btn {
-    font-size: 1rem;
-  }
-
-  .cart_items_total button {
-    font-size: 1.1rem;
   }
 }
