--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -9,6 +9,6 @@ footer{
 
 footer h3{
     text-align: center;
-    font-family: "Roboto Slab";
-    font-weight: 800;
+    font-family: "Work Sans";
+    font-weight: 600;
 }
