--- a/src/components/Home/ProductsDisplay/styles.css
+++ b/src/components/Home/ProductsDisplay/styles.css
@@ -1,7 +1,7 @@
 .productDisplay__wrapper{
     margin: 8rem auto -8rem auto;
     width: 94%;
-    max-width: 1500px;
+    max-width: 1200px;
 }
 
 .products_card_display{
@@ -12,7 +12,7 @@
 
 .products__card{
     width: 100%;
-    height: 600px;
+    height: auto;
     background: rgb(238, 233, 233);
     border-radius: 10px;
     overflow: hidden;
@@ -43,14 +43,14 @@
 
 .product__details h2{
     font-weight: 600;
-    font-size: 1.7rem;
+    font-size: 1.4rem;
     margin-bottom: .5rem;
     flex: 1;
 }
 
 .product__details h3{
     display: flex;
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     font-weight: 500;
     margin-bottom: 2.1rem;
     flex: 1;
@@ -91,41 +91,8 @@
         grid-template-columns: repeat(2, 1fr);
     }
 
-    .products__card{
-        height: 500px;
-    }
-
     .card__image img{
         height: 320px;
-    }
-
-    .product__details h2{
-        font-size: 1.7rem;
-    }
-
-    .product__details h3{
-        font-size: 1.5rem;
-    }
-}
-
-@media(max-width: 780px){
-    
-    .products_card_display{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .products__card{
-        width: 98%;
-        max-width: 400px;
-    }
-
-    .product__details h2{
-        font-size: 1.3rem;
-    }
-
-    .product__details h3{
-        font-size: 1.1rem;
     }
 }
 
@@ -134,19 +101,5 @@
     .products_card_display{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-    }
-
-    .products__card{
-        width: 100%;
-        max-width: 100%;
-    }
-
-    .product__details h2{
-        font-size: 1.4rem;
-        font-weight: 600;
-    }
-
-    .product__details h3{
-        font-size: 1.2rem;
     }
 }
